# pdf-ingestion

./: .gitignore  README.md  pyproject.toml
pdf_ingestion/: __init__.py  extraction_service.py  extractor.py  field_extractor.py  pdf_parser.py  schema.py
pdf_ingestion/vlm/: __init__.py  claude_vlm_client.py  qwen_vlm_client.py  vlm_router.py  vlm_types.py
tests/: conftest.py  test_extraction_service.py  test_extractor.py  test_field_extractor.py  test_pdf_parser.py  test_schema.py  test_vlm.py
